runtime/gen/basis-ffi.h

C_Errno_t(C_Int_t) Posix_TTY_TC_drain(C_Fd_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_flow(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_flush(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_getattr(C_Fd_t);
C_Errno_t(C_PId_t) Posix_TTY_TC_getpgrp(C_Fd_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_sendbreak(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_setattr(C_Fd_t,C_Int_t);
C_Errno_t(C_Int_t) Posix_TTY_TC_setpgrp(C_Fd_t,C_PId_t);
extern const C_Int_t Posix_TTY_TC_TCIFLUSH;
extern const C_Int_t Posix_TTY_TC_TCIOFF;
extern const C_Int_t Posix_TTY_TC_TCIOFLUSH;
extern const C_Int_t Posix_TTY_TC_TCION;
extern const C_Int_t Posix_TTY_TC_TCOFLUSH;
extern const C_Int_t Posix_TTY_TC_TCOOFF;
extern const C_Int_t Posix_TTY_TC_TCOON;
extern const C_Int_t Posix_TTY_TC_TCSADRAIN;
extern const C_Int_t Posix_TTY_TC_TCSAFLUSH;
extern const C_Int_t Posix_TTY_TC_TCSANOW;
C_Speed_t Posix_TTY_Termios_cfGetISpeed(void);
C_Speed_t Posix_TTY_Termios_cfGetOSpeed(void);
C_Errno_t(C_Int_t) Posix_TTY_Termios_cfSetISpeed(C_Speed_t);
C_Errno_t(C_Int_t) Posix_TTY_Termios_cfSetOSpeed(C_Speed_t);
void Posix_TTY_Termios_getCC(Array(C_CC_t));
C_TCFlag_t Posix_TTY_Termios_getCFlag(void);
C_TCFlag_t Posix_TTY_Termios_getIFlag(void);
C_TCFlag_t Posix_TTY_Termios_getLFlag(void);
C_TCFlag_t Posix_TTY_Termios_getOFlag(void);
void Posix_TTY_Termios_setCC(Array(C_CC_t));
void Posix_TTY_Termios_setCFlag(C_TCFlag_t);
void Posix_TTY_Termios_setIFlag(C_TCFlag_t);
void Posix_TTY_Termios_setLFlag(C_TCFlag_t);
void Posix_TTY_Termios_setOFlag(C_TCFlag_t);
extern const C_Int_t Posix_TTY_V_NCCS;
extern const C_Int_t Posix_TTY_V_VEOF;
extern const C_Int_t Posix_TTY_V_VEOL;
extern const C_Int_t Posix_TTY_V_VERASE;
extern const C_Int_t Posix_TTY_V_VINTR;
extern const C_Int_t Posix_TTY_V_VKILL;
extern const C_Int_t Posix_TTY_V_VMIN;
extern const C_Int_t Posix_TTY_V_VQUIT;
extern const C_Int_t Posix_TTY_V_VSTART;
extern const C_Int_t Posix_TTY_V_VSTOP;
extern const C_Int_t Posix_TTY_V_VSUSP;
extern const C_Int_t Posix_TTY_V_VTIME;
C_Errno_t(C_Int_t) Socket_accept(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
extern const C_Int_t Socket_AF_INET;
extern const C_Int_t Socket_AF_INET6;
extern const C_Int_t Socket_AF_UNIX;
extern const C_Int_t Socket_AF_UNSPEC;
C_Errno_t(C_Int_t) Socket_bind(C_Sock_t,Vector(Word8_t),C_Socklen_t);
C_Errno_t(C_Int_t) Socket_close(C_Sock_t);
C_Errno_t(C_Int_t) Socket_connect(C_Sock_t,Vector(Word8_t),C_Socklen_t);
extern const C_Int_t Socket_Ctl_FIONBIO;
extern const C_Int_t Socket_Ctl_FIONREAD;
C_Errno_t(C_Int_t) Socket_Ctl_getIOCtl(C_Sock_t,C_Int_t,Array(Word8_t));
C_Errno_t(C_Int_t) Socket_Ctl_getPeerName(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
C_Errno_t(C_Int_t) Socket_Ctl_getSockName(C_Sock_t,Array(Word8_t),Ref(C_Socklen_t));
C_Errno_t(C_Int_t) Socket_Ctl_getSockOpt(C_Sock_t,C_Int_t,C_Int_t,Array(Word8_t),Ref(C_Socklen_t));
C_Errno_t(C_Int_t) Socket_Ctl_setIOCtl(C_Sock_t,C_Int_t,Vector(Word8_t));
C_Errno_t(C_Int_t) Socket_Ctl_setSockOpt(C_Sock_t,C_Int_t,C_Int_t,Vector(Word8_t),C_Socklen_t);
extern const C_Int_t Socket_Ctl_SIOCATMARK;
extern const C_Int_t Socket_Ctl_SO_ACCEPTCONN;
extern const C_Int_t Socket_Ctl_SO_BROADCAST;
extern const C_Int_t Socket_Ctl_SO_DEBUG;
extern const C_Int_t Socket_Ctl_SO_DONTROUTE;
extern const C_Int_t Socket_Ctl_SO_ERROR;
extern const C_Int_t Socket_Ctl_SO_KEEPALIVE;
extern const C_Int_t Socket_Ctl_SO_LINGER;
extern const C_Int_t Socket_Ctl_SO_OOBINLINE;
extern const C_Int_t Socket_Ctl_SO_RCVBUF;
extern const C_Int_t Socket_Ctl_SO_RCVLOWAT;
extern const C_Int_t Socket_Ctl_SO_RCVTIMEO;
extern const C_Int_t Socket_Ctl_SO_REUSEADDR;
extern const C_Int_t Socket_Ctl_SO_SNDBUF;
extern const C_Int_t Socket_Ctl_SO_SNDLOWAT;
extern const C_Int_t Socket_Ctl_SO_SNDTIMEO;
extern const C_Int_t Socket_Ctl_SO_TYPE;
extern const C_Int_t Socket_Ctl_SOL_SOCKET;
C_Int_t Socket_familyOfAddr(Vector(Word8_t));
C_Errno_t(C_Int_t) Socket_GenericSock_socket(C_Int_t,C_Int_t,C_Int_t);
C_Errno_t(C_Int_t) Socket_GenericSock_socketPair(C_Int_t,C_Int_t,C_Int_t,Array(C_Int_t));
extern const C_Int_t Socket_INetSock_Ctl_IPPROTO_TCP;
extern const C_Int_t Socket_INetSock_Ctl_TCP_NODELAY;
void Socket_INetSock_fromAddr(Vector(Word8_t));
void Socket_INetSock_getInAddr(Array(Word8_t));
Word16_t Socket_INetSock_getPort(void);
void Socket_INetSock_toAddr(Vector(Word8_t),Word16_t,Array(Word8_t),Ref(C_Socklen_t));
C_Errno_t(C_Int_t) Socket_listen(C_Sock_t,C_Int_t);
extern const C_Int_t Socket_MSG_CTRUNC;
extern const C_Int_t Socket_MSG_DONTROUTE;
extern const C_Int_t Socket_MSG_DONTWAIT;
extern const C_Int_t Socket_MSG_EOR;
extern const C_Int_t Socket_MSG_OOB;
extern const C_Int_t Socket_MSG_PEEK;
extern const C_Int_t Socket_MSG_TRUNC;
extern const C_Int_t Socket_MSG_WAITALL;
C_Errno_t(C_SSize_t) Socket_recv(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t);
C_Errno_t(C_SSize_t) Socket_recvFrom(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t,Array(Word8_t),Ref(C_Socklen_t));
C_Errno_t(C_SSize_t) Socket_sendArr(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t);
C_Errno_t(C_SSize_t) Socket_sendArrTo(C_Sock_t,Array(Word8_t),C_Int_t,C_Size_t,C_Int_t,Vector(Word8_t),C_Socklen_t);
C_Errno_t(C_SSize_t) Socket_sendVec(C_Sock_t,Vector(Word8_t),C_Int_t,C_Size_t,C_Int_t);
C_Errno_t(C_SSize_t) Socket_sendVecTo(C_Sock_t,Vector(Word8_t),C_Int_t,C_Size_t,C_Int_t,Vector(Word8_t),C_Socklen_t);
extern const C_Int_t Socket_SHUT_RD;
extern const C_Int_t Socket_SHUT_RDWR;
extern const C_Int_t Socket_SHUT_WR;
C_Errno_t(C_Int_t) Socket_shutdown(C_Sock_t,C_Int_t);
extern const C_Int_t Socket_SOCK_DGRAM;
extern const C_Int_t Socket_SOCK_RAW;
extern const C_Int_t Socket_SOCK_SEQPACKET;
extern const C_Int_t Socket_SOCK_STREAM;
extern const C_Size_t Socket_sockAddrStorageLen;
void Socket_UnixSock_fromAddr(Vector(Word8_t),Array(Char8_t),C_Size_t);
C_Size_t Socket_UnixSock_pathLen(Vector(Word8_t));
void Socket_UnixSock_toAddr(NullString8_t,C_Size_t,Array(Word8_t),Ref(C_Socklen_t));
void Stdio_print(String8_t);
C_Int_t Time_getTimeOfDay(void);
C_Time_t Time_sec(void);
C_SUSeconds_t Time_usec(void);
C_Errno_t(C_PId_t) Windows_Process_create(NullString8_t,NullString8_t,NullString8_t,C_Fd_t,C_Fd_t,C_Fd_t);
C_Errno_t(C_Int_t) Windows_Process_terminate(C_PId_t,C_Signal_t);