basis-library/primitive/basis-ffi.sml

val TABDLY = _const "Posix_TTY_OFlags_TABDLY" : C.TCFlag.t;
val VT0 = _const "Posix_TTY_OFlags_VT0" : C.TCFlag.t;
val VT1 = _const "Posix_TTY_OFlags_VT1" : C.TCFlag.t;
val VTDLY = _const "Posix_TTY_OFlags_VTDLY" : C.TCFlag.t;
end
structure TC = 
struct
val drain = _import "Posix_TTY_TC_drain" : C.Fd.t -> (C.Int.t) C.Errno.t;
val flow = _import "Posix_TTY_TC_flow" : C.Fd.t * C.Int.t -> (C.Int.t) C.Errno.t;
val flush = _import "Posix_TTY_TC_flush" : C.Fd.t * C.Int.t -> (C.Int.t) C.Errno.t;
val getattr = _import "Posix_TTY_TC_getattr" : C.Fd.t -> (C.Int.t) C.Errno.t;
val getpgrp = _import "Posix_TTY_TC_getpgrp" : C.Fd.t -> (C.PId.t) C.Errno.t;
val sendbreak = _import "Posix_TTY_TC_sendbreak" : C.Fd.t * C.Int.t -> (C.Int.t) C.Errno.t;
val setattr = _import "Posix_TTY_TC_setattr" : C.Fd.t * C.Int.t -> (C.Int.t) C.Errno.t;
val setpgrp = _import "Posix_TTY_TC_setpgrp" : C.Fd.t * C.PId.t -> (C.Int.t) C.Errno.t;
val TCIFLUSH = _const "Posix_TTY_TC_TCIFLUSH" : C.Int.t;
val TCIOFF = _const "Posix_TTY_TC_TCIOFF" : C.Int.t;
val TCIOFLUSH = _const "Posix_TTY_TC_TCIOFLUSH" : C.Int.t;
val TCION = _const "Posix_TTY_TC_TCION" : C.Int.t;
val TCOFLUSH = _const "Posix_TTY_TC_TCOFLUSH" : C.Int.t;
val TCOOFF = _const "Posix_TTY_TC_TCOOFF" : C.Int.t;
val TCOON = _const "Posix_TTY_TC_TCOON" : C.Int.t;
val TCSADRAIN = _const "Posix_TTY_TC_TCSADRAIN" : C.Int.t;
val TCSAFLUSH = _const "Posix_TTY_TC_TCSAFLUSH" : C.Int.t;
val TCSANOW = _const "Posix_TTY_TC_TCSANOW" : C.Int.t;
end
structure Termios = 
struct
val cfGetISpeed = _import "Posix_TTY_Termios_cfGetISpeed" : unit -> C.Speed.t;
val cfGetOSpeed = _import "Posix_TTY_Termios_cfGetOSpeed" : unit -> C.Speed.t;
val cfSetISpeed = _import "Posix_TTY_Termios_cfSetISpeed" : C.Speed.t -> (C.Int.t) C.Errno.t;
val cfSetOSpeed = _import "Posix_TTY_Termios_cfSetOSpeed" : C.Speed.t -> (C.Int.t) C.Errno.t;
val getCC = _import "Posix_TTY_Termios_getCC" : (C.CC.t) array -> unit;
val getCFlag = _import "Posix_TTY_Termios_getCFlag" : unit -> C.TCFlag.t;
val getIFlag = _import "Posix_TTY_Termios_getIFlag" : unit -> C.TCFlag.t;
val getLFlag = _import "Posix_TTY_Termios_getLFlag" : unit -> C.TCFlag.t;
val getOFlag = _import "Posix_TTY_Termios_getOFlag" : unit -> C.TCFlag.t;
val setCC = _import "Posix_TTY_Termios_setCC" : (C.CC.t) array -> unit;
val setCFlag = _import "Posix_TTY_Termios_setCFlag" : C.TCFlag.t -> unit;
val setIFlag = _import "Posix_TTY_Termios_setIFlag" : C.TCFlag.t -> unit;
val setLFlag = _import "Posix_TTY_Termios_setLFlag" : C.TCFlag.t -> unit;
val setOFlag = _import "Posix_TTY_Termios_setOFlag" : C.TCFlag.t -> unit;
end
structure V = 
struct
val NCCS = _const "Posix_TTY_V_NCCS" : C.Int.t;
val VEOF = _const "Posix_TTY_V_VEOF" : C.Int.t;
val VEOL = _const "Posix_TTY_V_VEOL" : C.Int.t;
val VERASE = _const "Posix_TTY_V_VERASE" : C.Int.t;
val VINTR = _const "Posix_TTY_V_VINTR" : C.Int.t;
val VKILL = _const "Posix_TTY_V_VKILL" : C.Int.t;
val VMIN = _const "Posix_TTY_V_VMIN" : C.Int.t;
val VQUIT = _const "Posix_TTY_V_VQUIT" : C.Int.t;
val VSTART = _const "Posix_TTY_V_VSTART" : C.Int.t;
val VSTOP = _const "Posix_TTY_V_VSTOP" : C.Int.t;
val VSUSP = _const "Posix_TTY_V_VSUSP" : C.Int.t;
val VTIME = _const "Posix_TTY_V_VTIME" : C.Int.t;
end
end
end
structure Socket = 
struct
val accept = _import "Socket_accept" : C.Sock.t * (Word8.t) array * (C.Socklen.t) ref -> (C.Int.t) C.Errno.t;
structure AF = 
struct
val INET = _const "Socket_AF_INET" : C.Int.t;
val INET6 = _const "Socket_AF_INET6" : C.Int.t;
val UNIX = _const "Socket_AF_UNIX" : C.Int.t;
val UNSPEC = _const "Socket_AF_UNSPEC" : C.Int.t;
end
val bind = _import "Socket_bind" : C.Sock.t * (Word8.t) vector * C.Socklen.t -> (C.Int.t) C.Errno.t;
val close = _import "Socket_close" : C.Sock.t -> (C.Int.t) C.Errno.t;
val connect = _import "Socket_connect" : C.Sock.t * (Word8.t) vector * C.Socklen.t -> (C.Int.t) C.Errno.t;
structure Ctl = 
struct
val FIONBIO = _const "Socket_Ctl_FIONBIO" : C.Int.t;
val FIONREAD = _const "Socket_Ctl_FIONREAD" : C.Int.t;
val getIOCtl = _import "Socket_Ctl_getIOCtl" : C.Sock.t * C.Int.t * (Word8.t) array -> (C.Int.t) C.Errno.t;
val getPeerName = _import "Socket_Ctl_getPeerName" : C.Sock.t * (Word8.t) array * (C.Socklen.t) ref -> (C.Int.t) C.Errno.t;
val getSockName = _import "Socket_Ctl_getSockName" : C.Sock.t * (Word8.t) array * (C.Socklen.t) ref -> (C.Int.t) C.Errno.t;
val getSockOpt = _import "Socket_Ctl_getSockOpt" : C.Sock.t * C.Int.t * C.Int.t * (Word8.t) array * (C.Socklen.t) ref -> (C.Int.t) C.Errno.t;
val setIOCtl = _import "Socket_Ctl_setIOCtl" : C.Sock.t * C.Int.t * (Word8.t) vector -> (C.Int.t) C.Errno.t;
val setSockOpt = _import "Socket_Ctl_setSockOpt" : C.Sock.t * C.Int.t * C.Int.t * (Word8.t) vector * C.Socklen.t -> (C.Int.t) C.Errno.t;
val SIOCATMARK = _const "Socket_Ctl_SIOCATMARK" : C.Int.t;
val SO_ACCEPTCONN = _const "Socket_Ctl_SO_ACCEPTCONN" : C.Int.t;
val SO_BROADCAST = _const "Socket_Ctl_SO_BROADCAST" : C.Int.t;
val SO_DEBUG = _const "Socket_Ctl_SO_DEBUG" : C.Int.t;
val SO_DONTROUTE = _const "Socket_Ctl_SO_DONTROUTE" : C.Int.t;
val SO_ERROR = _const "Socket_Ctl_SO_ERROR" : C.Int.t;
val SO_KEEPALIVE = _const "Socket_Ctl_SO_KEEPALIVE" : C.Int.t;
val SO_LINGER = _const "Socket_Ctl_SO_LINGER" : C.Int.t;
val SO_OOBINLINE = _const "Socket_Ctl_SO_OOBINLINE" : C.Int.t;
val SO_RCVBUF = _const "Socket_Ctl_SO_RCVBUF" : C.Int.t;
val SO_RCVLOWAT = _const "Socket_Ctl_SO_RCVLOWAT" : C.Int.t;
val SO_RCVTIMEO = _const "Socket_Ctl_SO_RCVTIMEO" : C.Int.t;
val SO_REUSEADDR = _const "Socket_Ctl_SO_REUSEADDR" : C.Int.t;
val SO_SNDBUF = _const "Socket_Ctl_SO_SNDBUF" : C.Int.t;
val SO_SNDLOWAT = _const "Socket_Ctl_SO_SNDLOWAT" : C.Int.t;
val SO_SNDTIMEO = _const "Socket_Ctl_SO_SNDTIMEO" : C.Int.t;
val SO_TYPE = _const "Socket_Ctl_SO_TYPE" : C.Int.t;
val SOL_SOCKET = _const "Socket_Ctl_SOL_SOCKET" : C.Int.t;
end
val familyOfAddr = _import "Socket_familyOfAddr" : (Word8.t) vector -> C.Int.t;
structure GenericSock = 
struct
val socket = _import "Socket_GenericSock_socket" : C.Int.t * C.Int.t * C.Int.t -> (C.Int.t) C.Errno.t;
val socketPair = _import "Socket_GenericSock_socketPair" : C.Int.t * C.Int.t * C.Int.t * (C.Int.t) array -> (C.Int.t) C.Errno.t;
end
structure INetSock = 
struct
structure Ctl = 
struct
val IPPROTO_TCP = _const "Socket_INetSock_Ctl_IPPROTO_TCP" : C.Int.t;
val TCP_NODELAY = _const "Socket_INetSock_Ctl_TCP_NODELAY" : C.Int.t;
end
val fromAddr = _import "Socket_INetSock_fromAddr" : (Word8.t) vector -> unit;
val getInAddr = _import "Socket_INetSock_getInAddr" : (Word8.t) array -> unit;
val getPort = _import "Socket_INetSock_getPort" : unit -> C.Int.t;
val toAddr = _import "Socket_INetSock_toAddr" : (Word8.t) vector * C.Int.t * (Word8.t) array * (C.Socklen.t) ref -> unit;
end
val listen = _import "Socket_listen" : C.Sock.t * C.Int.t -> (C.Int.t) C.Errno.t;
val MSG_CTRUNC = _const "Socket_MSG_CTRUNC" : C.Int.t;
val MSG_DONTROUTE = _const "Socket_MSG_DONTROUTE" : C.Int.t;
val MSG_DONTWAIT = _const "Socket_MSG_DONTWAIT" : C.Int.t;
val MSG_EOR = _const "Socket_MSG_EOR" : C.Int.t;
val MSG_OOB = _const "Socket_MSG_OOB" : C.Int.t;
val MSG_PEEK = _const "Socket_MSG_PEEK" : C.Int.t;
val MSG_TRUNC = _const "Socket_MSG_TRUNC" : C.Int.t;
val MSG_WAITALL = _const "Socket_MSG_WAITALL" : C.Int.t;
val recv = _import "Socket_recv" : C.Sock.t * (Word8.t) array * C.Int.t * C.Size.t * C.Int.t -> (C.SSize.t) C.Errno.t;
val recvFrom = _import "Socket_recvFrom" : C.Sock.t * (Word8.t) array * C.Int.t * C.Size.t * C.Int.t * (Word8.t) array * (C.Socklen.t) ref -> (C.SSize.t) C.Errno.t;
val sendArr = _import "Socket_sendArr" : C.Sock.t * (Word8.t) array * C.Int.t * C.Size.t * C.Int.t -> (C.SSize.t) C.Errno.t;
val sendArrTo = _import "Socket_sendArrTo" : C.Sock.t * (Word8.t) array * C.Int.t * C.Size.t * C.Int.t * (Word8.t) vector * C.Socklen.t -> (C.SSize.t) C.Errno.t;
val sendVec = _import "Socket_sendVec" : C.Sock.t * (Word8.t) vector * C.Int.t * C.Size.t * C.Int.t -> (C.SSize.t) C.Errno.t;
val sendVecTo = _import "Socket_sendVecTo" : C.Sock.t * (Word8.t) vector * C.Int.t * C.Size.t * C.Int.t * (Word8.t) vector * C.Socklen.t -> (C.SSize.t) C.Errno.t;
val SHUT_RD = _const "Socket_SHUT_RD" : C.Int.t;
val SHUT_RDWR = _const "Socket_SHUT_RDWR" : C.Int.t;
val SHUT_WR = _const "Socket_SHUT_WR" : C.Int.t;
val shutdown = _import "Socket_shutdown" : C.Sock.t * C.Int.t -> (C.Int.t) C.Errno.t;
structure SOCK = 
struct
val DGRAM = _const "Socket_SOCK_DGRAM" : C.Int.t;
val RAW = _const "Socket_SOCK_RAW" : C.Int.t;
val SEQPACKET = _const "Socket_SOCK_SEQPACKET" : C.Int.t;
val STREAM = _const "Socket_SOCK_STREAM" : C.Int.t;
end
val sockAddrStorageLen = _const "Socket_sockAddrStorageLen" : C.Size.t;
structure UnixSock = 
struct
val fromAddr = _import "Socket_UnixSock_fromAddr" : (Word8.t) vector * (Char8.t) array * C.Size.t -> unit;
val pathLen = _import "Socket_UnixSock_pathLen" : (Word8.t) vector -> C.Size.t;
val toAddr = _import "Socket_UnixSock_toAddr" : NullString8.t * C.Size.t * (Word8.t) array * (C.Socklen.t) ref -> unit;
end
end
structure Stdio = 
struct
val print = _import "Stdio_print" : String8.t -> unit;
end
structure Time = 
struct
val getTimeOfDay = _import "Time_getTimeOfDay" : unit -> C.Int.t;
val sec = _import "Time_sec" : unit -> C.Time.t;
val usec = _import "Time_usec" : unit -> C.SUSeconds.t;
end
structure Windows = 
struct
structure Process = 
struct
val create = _import "Windows_Process_create" : NullString8.t * NullString8.t * NullString8.t * C.Fd.t * C.Fd.t * C.Fd.t -> (C.PId.t) C.Errno.t;
val terminate = _import "Windows_Process_terminate" : C.PId.t * C.Signal.t -> (C.Int.t) C.Errno.t;
end
end
end
